--- a/TADStyleSheet.css
+++ b/TADStyleSheet.css
@@ -114,15 +114,19 @@ h3 {
 
 .feature-image {
     display: block;
-    background-color: #ebebeb;
-    background-attachment: fixed;
-    background-position: 100%, 50%;
+    //background-color: #ebebeb;
+    //background-attachment: fixed;
+    //background-position: 100%, 50%;
     float: right;
-    padding-top: 15%;
+    padding-top: 0%;
     padding-bottom: 3%;
     height: auto;
     max-width: 720px;
     width: 100%;
+
+    right: 0px;
+    margin-right: 0;
+    padding-left: 64%;
 }
 
 .feature-gallery-list {
@@ -170,7 +174,7 @@ video{
     .center {
         margin: auto;
         width: 50%;
-        padding-top: 13%;
+        padding-top: 0%;
         padding-bottom: 3%;
     }
 
@@ -182,15 +186,19 @@ video{
 
     .feature-image {
         display: block;
-        background-color: #ebebeb;
-        background-attachment: fixed;
-        background-position: 100%, 50%;
+       // background-color: #ebebeb;
+      //  background-attachment: fixed;
+     //   background-position: 100%, 50%;
         float: right;
-        padding-top: 15%;
+        padding-top: 1%;
         padding-bottom: 3%;
         height: auto;
-        max-width: 200px;
+        max-width: 400px;
         width: 100%;
+
+        right: 0px;
+        margin-right: 0;
+        padding-left: 20%;
     }
     
     #feature-video {
@@ -237,6 +245,7 @@ video{
         padding-bottom: 3%;
     }
 
+
     .right {
         right: 0px;
         margin-right: 0;
@@ -249,11 +258,17 @@ video{
         //background-attachment: fixed;
         //background-position: 100%, 50%;
         float: right;
-        padding-top: 15%;
+        padding-top: 0%;
         padding-bottom: 3%;
         height: auto;
-        max-width: 50px;
+        max-width: 200px;
         width: 100%;
+
+        right: 0px;
+        margin-right: 0;
+        //width: 300px;
+        padding-left: 0%;
+        //background-size: //border: 3px solid #ebebeb;
     }
 
     body{
