--- a/TADStyleSheet.css
+++ b/TADStyleSheet.css
@@ -40,7 +40,7 @@ body
     bottom: 0;
     right: 15vw;
     display: inline-block;
-    font-size: 25px;
+    font-size: 3vw;
 }
 
 #navlist {
@@ -56,12 +56,12 @@ body
 h2 {
     display: inline-block;
     padding: 0px 7px 0px 7px;
-    font-size: 24px;
+    font-size: 2.75vw;
 }
 
 h2 {
     font-family: Helvetica-Bold, sans-serif;
-    font-size: 20px;
+    font-size: 2.75vw;
 }
 
 .left {
@@ -138,6 +138,12 @@ h3 {
     max-width: 100%;
 }
 
+#under-construction-image {
+    padding-top: 27%; 
+    padding-bottom: 0%;
+    margin-bottom: 0%;
+}
+
 .max-height-full {
     max-height: 100%;
 }
@@ -157,7 +163,13 @@ video{
     max-width: 100%;
 }
 
+@media screen and (max-width: 1000px) {
+    .feature-subtext{
+        font-size: 16px;
+    }
+}
 
+/*
 @media screen and (max-width: 800px) {
     #navlist li,
     h2 {
@@ -165,142 +177,142 @@ video{
         padding: 0px 7px 0px 7px;
         font-size: 20px;
     }
+}*/
+
+
+@media screen and (max-width: 564px) {
+    .titlebar {
+        position: fixed;
+        background-color: #ebebeb;
+        font-family: Helvetica-Bold, sans-serif;
+        color: #36a3ff;
+        text-align: left;
+        height: 13vw;
+        max-height: 150px;
+        min-height: 90px;
+        width: 102%;
+        transform: rotate(-3deg) translateY(-50px) translateX(-2px);
+    }
+
+    .center {
+        margin: auto;
+        width: 50%;
+        padding-top: 0%;
+        padding-bottom: 3%;
+    }
+
+    .right {
+        right: 0px;
+        margin-right: 0;
+        padding-left: 20%;
+    }
+
+    .feature-image {
+        //display: block;
+        // background-color: #ebebeb;
+        // background-attachment: fixed;
+        // background-position: 100%, 50%;
+        float: right;
+        padding-top: 1%;
+        padding-bottom: 3%;
+        height: auto;
+        max-width: 400px;
+        width: 100%;
+        right: 0px;
+        margin-right: 0;
+        padding-left: 20%;
+    }
+
+    #feature-video {
+        width: 66.66vw;
+        max-width: 400px;
+    }
+
+    .feature-subtext {
+        text-align: left;
+        padding-top: 1%;
+        padding-left: 5%;
+        font-size: 16px;
+    }
+
+    #navlist li,
+    h2 {
+        display: block;
+        padding: 0px 7px 0px 7px;
+        font-size: 16px;
+    }
+
+    #main-title {
+        text-align: right;
+        position: absolute;
+        bottom: 0;
+        right: 15vw;
+        display: inline-block;
+        font-size: 24px;
+    }
+
+    h3 {
+        font-family: Helvetica-Bold, sans-serif;
+        font-size: 18px;
+        text-align: left;
+    }
 }
 
-
-    @media screen and (max-width: 700px) {
-        .titlebar {
-            position: fixed;
-            background-color: #ebebeb;
-            font-family: Helvetica-Bold, sans-serif;
-            color: #36a3ff;
-            text-align: left;
-            height: 13vw;
-            max-height: 150px;
-            min-height: 90px;
-            width: 102%;
-            transform: rotate(-3deg) translateY(-50px) translateX(-2px);
-        }
-
-        .center {
-            margin: auto;
-            width: 50%;
-            padding-top: 0%;
-            padding-bottom: 3%;
-        }
-
-        .right {
-            right: 0px;
-            margin-right: 0;
-            padding-left: 20%;
-        }
-
-        .feature-image {
-            //display: block;
-            // background-color: #ebebeb;
-            // background-attachment: fixed;
-            // background-position: 100%, 50%;
-            float: right;
-            padding-top: 1%;
-            padding-bottom: 3%;
-            height: auto;
-            max-width: 400px;
-            width: 100%;
-            right: 0px;
-            margin-right: 0;
-            padding-left: 20%;
-        }
-
-        #feature-video {
-            width: 66.66vw;
-            max-width: 400px;
-        }
-
-        .feature-subtext {
-            text-align: left;
-            padding-top: 1%;
-            padding-left: 5%;
-            font-size: 16px;
-        }
-
-        #navlist li,
-        h2 {
-            display: block;
-            padding: 0px 7px 0px 7px;
-            font-size: 16px;
-        }
-
-        #main-title {
-            text-align: right;
-            position: absolute;
-            bottom: 0;
-            right: 15vw;
-            display: inline-block;
-            font-size: 24px;
-        }
-
-        h3 {
-            font-family: Helvetica-Bold, sans-serif;
-            font-size: 18px;
-            text-align: left;
-        }
+@media screen and (max-width: 400px) {
+    .center {
+        margin: auto;
+        width: 50%;
+        padding-top: 20%;
+        padding-bottom: 3%;
     }
 
-    @media screen and (max-width: 675px) {
-        .center {
-            margin: auto;
-            width: 50%;
-            padding-top: 20%;
-            padding-bottom: 3%;
-        }
 
-
-        .right {
-            right: 0px;
-            margin-right: 0;
-            padding-left: 0%;
-        }
-
-        .feature-image {
-            //display: block;
-            //background-color: #ebebeb;
-            //background-attachment: fixed;
-            //background-position: 100%, 50%;
-            float: right;
-            padding-top: 0%;
-            padding-bottom: 3%;
-            height: auto;
-            max-width: 200px;
-            width: 100%;
-            right: 0px;
-            margin-right: 0;
-            //width: 300px;
-            padding-left: 0%;
-            //background-size: //border: 3px solid #ebebeb;
-        }
-
-        body {
-            width: 375px;
-        }
-
-        #navlist li,
-        h2 {
-            display: block;
-            padding: 0px 7px 0px 7px;
-            font-size: 16px;
-        }
+    .right {
+        right: 0px;
+        margin-right: 0;
+        padding-left: 0%;
     }
 
-    @media screen and (max-width: 600px) {
-        #navlist li,
-        h2 {
-            display: block;
-            padding: 0px 7px 1.5px 7px;
-            font-size: 12px;
-        }
-
-        #main-title {
-            display: inline;
-            position: fixed;
-        }
+    .feature-image {
+        //display: block;
+        //background-color: #ebebeb;
+        //background-attachment: fixed;
+        //background-position: 100%, 50%;
+        float: right;
+        padding-top: 0%;
+        padding-bottom: 3%;
+        height: auto;
+        max-width: 200px;
+        width: 100%;
+        right: 0px;
+        margin-right: 0;
+        //width: 300px;
+        padding-left: 0%;
+        //background-size: //border: 3px solid #ebebeb;
     }
+
+    body {
+        width: 375px;
+    }
+
+    #navlist li,
+    h2 {
+        display: block;
+        padding: 0px 7px 0px 7px;
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    #navlist li,
+    h2 {
+        display: block;
+        padding: 0px 7px 1.5px 7px;
+        font-size: 12px;
+    }
+
+    #main-title {
+        display: inline;
+        position: fixed;
+    }
+}
